@@ -1,3 +1,10 @@
+
+Requirements:
+
+1. You must have the Mark5 streamstor libraries installed
+
+2. difxmessage is needed
+
 To install from a fresh svn checkout, run the following:
 
 aclocal
@@ -14,7 +21,3 @@ After an svn update, these steps do not need to be rerun.  at most, running
 autoreconf should be enough, but usually just "make" will update 
 everything properly.
 
-If you want to use keyin format gain curves for antennas, you must
-set environment variable GAIN_CURVE_PATH to point to a directory containing
-gain curves in keyin format.  WARNING: All files in that directory will be 
-interpretted as gain curve files!
